# Pillar

./: .gitignore  .gitmodules  ANIMATION_SPRITE_WORKFLOW_COMPLETE.md  ANIMATION_SYSTEM_INTEGRATION_PLAN.md  ANIMATION_SYSTEM_PHASE1_COMPLETE.md  ANIMATION_SYSTEM_PHASE2_COMPLETE.md  ANIMATION_SYSTEM_PHASE3_COMPLETE.md  ANIMATION_SYSTEM_PLAN.md  BALL_GAME_PROGRESS.md  BUG_FIXES.md  CAMERA_SYSTEM_PLAN.md  CMakeLists.txt  CMakeSettings.json  COLLIDER_SYSTEM_ANALYSIS.md  DEMO_UPDATED_CONTROLS.md  DEV_UPDATE_INSPECTOR_UX_OVERHAUL.md  DISTRIBUTION_AND_INSTALLER_DESIGN.md  ECS_PHYSICS_IMPLEMENTATION_PLAN.md  EDITOR_ANALYSIS_AND_ROADMAP.md  EDITOR_IMPLEMENTATION_PLAN.md  EDITOR_LIGHTING_INTEGRATION_PLAN.md  EDITOR_QOL_ACTION_PLAN.md  EDITOR_STATUS_REPORT.md  EDITOR_THEME_SYSTEM.md  EDITOR_VISUAL_OVERHAUL_GUIDE.md  ENGINE_API_GUIDE.md  ENGINE_SUGGESTIONS.md  EditorSettings.json  FEATURE_SHOWCASE_GAME_DESIGN.md  FRAMEWORK_DESIGN.md  GRAVITY_GOLF_GAME_DESIGN.md  IMGUI_REVIEW.md  LIGHTING_CODE_REVIEW.md  LIGHTING_SYSTEM_2D.md  OBJECT_POOLING_IMPLEMENTATION.md  PARTICLE_SYSTEM_DESIGN.md  PERFORMANCE_DEMOS_SUMMARY.md  PHASE_3_SUMMARY.md  PHASE_4_SUMMARY.md  PHASE_5_COMPLETION_SUMMARY.md  (+20 more)
Pillar/: CMakeLists.txt  Pillar.vcxproj  Pillar.vcxproj.filters
Pillar/docs/: AUDIO_SYSTEM_INTEGRATION.md  AUDIO_SYSTEM_PLAN.md  Animation_System_Guide.md  BatchRenderer_Usage.md  ObjectPooling.md  ObjectPooling_Performance.md
Pillar/src/: Layer.h  Pillar.h
Pillar/src/Pillar/: Application.cpp  Application.h  Core.h  EntryPoint.h  ImGuiLayer.cpp  ImGuiLayer.h  Input.cpp  Input.h  KeyCodes.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Logger.cpp  Logger.h  Time.cpp  Time.h  Window.h
Pillar/src/Pillar/Audio/: AudioBuffer.cpp  AudioBuffer.h  AudioClip.cpp  (+9 more)
Pillar/src/Platform/: WindowsWindow.cpp  WindowsWindow.h
PillarEditor/: CMakeLists.txt
PillarEditor/assets/: README.md
PillarEditor/assets/textures/: character_walk_cycle.spritesheet.json  character_walk_cycle_animation.anim.json
PillarEditor/src/: AsepriteImporter.cpp  AsepriteImporter.h  EditorApp.cpp  EditorCamera.cpp  EditorCamera.h  EditorConstants.h  EditorLayer.cpp  EditorLayer.h  EditorSettings.cpp  EditorSettings.h  EntityTemplate.h  SelectionContext.cpp  SelectionContext.h  SpriteSheetMetadata.cpp  SpriteSheetMetadata.h  TemplateManager.cpp  TemplateManager.h  TexturePackerImporter.cpp  TexturePackerImporter.h
PillarEditor/src/Commands/: Command.h  CommandHistory.h  EntityCommands.h  TransformCommand.h
PillarEditor/src/Panels/: AnimationEditorPanel.cpp  AnimationEditorPanel.h  AnimationManagerPanel.cpp  AnimationManagerPanel.h  ConsolePanel.cpp  ConsolePanel.h  ContentBrowserPanel.cpp  ContentBrowserPanel.h  EditorPanel.h  InspectorPanel.cpp  InspectorPanel.h  LayerEditorPanel.cpp  LayerEditorPanel.h  SceneHierarchyPanel.cpp  SceneHierarchyPanel.h  SpriteSheetEditorPanel.cpp  SpriteSheetEditorPanel.h  TemplateLibraryPanel.cpp  TemplateLibraryPanel.h  ViewportPanel.cpp  ViewportPanel.h
PillarEditor/src/Utils/: AnimationLibraryManager.cpp  AnimationLibraryManager.h  FileDialog.cpp  FileDialog.h
Sandbox/: CMakeLists.txt  Sandbox.vcxproj  Sandbox.vcxproj.filters
Sandbox/assets/: ARENA_PROTOCOL_ASSETS.md  ASSET_GUIDE.md  ball_game_texture_prompts.md
Sandbox/assets/audio/: README.md
Sandbox/assets/scenes/: audio_demo.scene.json  demo.scene.json
Sandbox/src/: AdvancedParticleDemo.h  AnimationDemoLayer.h  ArenaProtocolLayer.h  ArenaProtocolLayer_Legacy.h  AudioDemoLayer.h  DemoMenuLayer.h  ExampleLayer.h  HeavyEntityPerfDemo.h  LightEntityPerfDemo.h  Lighting2DDemoLayer.h  ObjectPoolDemo.h  ParticleEmitterDemo.h  ParticleSystemDemo.h  PhysicsDemoLayer.h  SceneDemoLayer.h  Source.cpp
Sandbox/src/ArenaProtocol/: ArenaProtocolLayer.cpp  ArenaProtocolLayer.h
Sandbox/src/Chambers/: ChamberManager.cpp  ChamberManager.h
Sandbox/src/Components/: BossAIComponent.h  CameraEffectsComponent.h  ChargerAIComponent.h  EnemyAIComponent.h  HealthComponent.h  ObstacleComponent.h  PlayerStatsComponent.h  TriggerComponent.h  TurretAIComponent.h  WaveManagerComponent.h  WeaponComponent.h  XPGemVisualComponent.h
Sandbox/src/Factory/: EntityFactory.cpp  EntityFactory.h
Sandbox/src/Systems/: BossAISystem.cpp  BossAISystem.h  BulletSystem.cpp  BulletSystem.h  EnemyAISystem.cpp  EnemyAISystem.h  WaveSystem.cpp  WaveSystem.h  XPCollectionSystem.cpp  XPCollectionSystem.h
Sandbox/src/ball_game/: GameAudio.h  GameComponents.h  GravityGolfLayer.h  TutorialLevels.h
Tests/: CMakeLists.txt  README.md
Tests/src/: AnimationTests.cpp  ApplicationTests.cpp  AudioTests.cpp  CameraTests.cpp  ComponentRegistryTests.cpp  ComponentTests.cpp  InputTests.cpp  LayerTests.cpp  LoggerTests.cpp  SceneSerializerTests.cpp  SpatialHashGridTests.cpp  WindowTests.cpp
Tests/src/Audio/: AudioExtendedTests.cpp  AudioTests.cpp
Tests/src/Core/: ApplicationEventTests.cpp  ApplicationTests.cpp  AssetManagerTests.cpp  EventTests.cpp  InputTests.cpp  LayerTests.cpp  LoggerTests.cpp  Math2DTests.cpp  RandomTests.cpp  TimeTests.cpp  WindowTests.cpp
Tests/src/ECS/: ComponentRegistryTests.cpp  ComponentTests.cpp  EntityTests.cpp  LightingComponentTests.cpp  ObjectPoolTests.cpp  SceneSerializerTests.cpp  SceneTests.cpp  SpecializedPoolsTests.cpp  TransformComponentExtendedTests.cpp
Tests/src/Gameplay/: AnimationTests.cpp  BulletCollisionTests.cpp  ParticleSystemTests.cpp  SpatialHashGridTests.cpp  VelocityIntegrationTests.cpp  XPCollectionTests.cpp
Tests/src/Integration/: AssetPipelineE2ETests.cpp  AudioIntegrationTests.cpp  ComponentSerializationTests.cpp  ECSIntegrationTests.cpp  EndToEndSceneTests.cpp  GameFrameE2ETests.cpp  GameplayScenarioTests.cpp  PerformanceTests.cpp  PrefabSerializationTests.cpp  RenderingIntegrationTests.cpp
Tests/src/Physics/: Box2DBodyFactoryTests.cpp  Box2DContactListenerTests.cpp  PhysicsSystemTests.cpp
Tests/src/Renderer/: CameraTests.cpp  Lighting2DAPITests.cpp  Lighting2DGeometryTests.cpp  Renderer2DBackendTests.cpp
templates/EmptyProject/: CMakeLists.txt
templates/EmptyProject/src/: GameLayer.cpp  GameLayer.h  main.cpp
(+162 files in other folders)
